Ana sayfa tasarlandı

--- a/NOVA/Content/Site.css
+++ b/NOVA/Content/Site.css
@@ -1,24 +1,234 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿@import url('https://fonts.googleapis.com/css?family=Numans');
+
+html, body {
+    
+    height: 100%;
+    font-family: 'Numans', sans-serif;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.container {
+    height: 100%;
+    align-content: center;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.card {
+    height: 370px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 400px;
+    background-color: rgba(255, 255, 255,0.4) !important;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.social_icon span {
+    font-size: 60px;
+    margin-left: 10px;
+    color: #FFC312;
 }
+
+    .social_icon span:hover {
+        color: white;
+        cursor: pointer;
+    }
+
+.card-header h3 {
+    color: black;
+    text-align:center;
+}
+
+.social_icon {
+    position: absolute;
+    right: 20px;
+    top: -45px;
+}
+
+.input-group-prepend span {
+    width: 50px;
+    background-color: royalblue;
+    color: white;
+    border: 0 !important;
+}
+
+input:focus {
+    outline: 0 0 0 0 !important;
+    box-shadow: 0 0 0 0 !important;
+}
+
+.remember {
+    color: black;
+}
+
+    .remember input {
+        width: 20px;
+        height: 20px;
+        margin-left: 15px;
+        margin-right: 5px;
+    }
+
+.login_btn {
+    color: white;
+    background-color: royalblue;
+    width: 100px;
+}
+
+    .login_btn:hover {
+        color: white;
+        background-color: cornflowerblue;
+    }
+
+.links {
+    color: white;
+}
+
+    .links a {
+        margin-left: 4px;
+    }
+#myVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+    position: fixed;
+    
+    color: #f1f1f1;
+    width: 100%;
+    padding: 40px;
+}
+.content-topleft {
+    position: absolute;
+    color: #f1f1f1;
+    width: 100%;
+    padding:5%;
+    top: 0;
+    left: 0;
+}
+.content-topright {
+    position: absolute;
+    color: #f1f1f1;
+    width: 100%;
+    padding: 5%;
+    top: 0;
+    right: 0;
+}
+.content-bottomright {
+    position: absolute;
+    color: #f1f1f1;
+    width: 100%;
+    padding: 5%;
+    bottom: 0;
+    right: 0;
+}
+.content-bottomleft {
+    position: absolute;
+    color: #f1f1f1;
+    width: 100%;
+    padding: 5%;
+    bottom: 0;
+    left: 0;
+}
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
+.jt {
+    position: relative;
+    font-size: 8vmin;
+    font-family: 'Staatliches', sans-serif;
+    text-transform: uppercase;
+    font-display: swap;
+    text-shadow: 0 0 10px white;
+}
+
+.jt__row {
+    display: block;
+}
+
+    .jt__row:nth-child(1) {
+        clip-path: polygon(-10% 75%, 110% 75%, 110% 110%, -10% 110%);
+    }
+
+    .jt__row:nth-child(2) {
+        clip-path: polygon(-10% 50%, 110% 50%, 110% 75.3%, -10% 75.3%);
+    }
+
+    .jt__row:nth-child(3) {
+        clip-path: polygon(-10% 25%, 110% 25%, 110% 50.3%, -10% 50.3%);
+    }
+
+    .jt__row:nth-child(4) {
+        clip-path: polygon(-10% 0%, 110% 0%, 110% 25.3%, -10% 25.3%);
+    }
+
+    .jt__row.jt__row--sibling {
+        position: absolute;
+        top: 0;
+        left: 0;
+        user-select: none;
+        width: 800px;
+    }
+
+.jt__text {
+    display: block;
+    transform-origin: bottom left;
+    animation: moveIn 2s 0s cubic-bezier(.36,0,.06,0) alternate infinite;
+}
+
+.jt__row:nth-child(1) .jt__text {
+    transform: translateY(-0.1em);
+}
+
+.jt__row:nth-child(2) .jt__text {
+    transform: translateY(-0.3em) scaleY(1.1);
+}
+
+.jt__row:nth-child(3) .jt__text {
+    transform: translateY(-0.5em) scaleY(1.2);
+}
+
+.jt__row:nth-child(4) .jt__text {
+    transform: translateY(-0.7em) scaleY(1.3);
+}
+
+.jt__row:nth-child(5) .jt__text {
+    transform: translateY(-0.9em) scaleY(1.4);
+}
+
+.jt__row:nth-child(6) .jt__text {
+    transform: translateY(-1.1em) scaleY(1.5);
+}
+
+@keyframes moveIn {
+    50%, 100% {
+        transform: translateY(0em)
+    }
+
+    0% {
+        opacity: 0;
+        filter: blur(10px);
+    }
+
+    100% {
+        opacity: 1;
+        filter: blur(0px);
+    }
+}
+
+
+
+.debug .jt__row:nth-child(even) {
+    color: black;
+    background: white;
+}
+
+.debug .jt__row:nth-child(odd) {
+    color: white;
+    background: black;
+}
+
