SecondPage tasarımına başlandı

--- a/NOVA/Content/Site.css
+++ b/NOVA/Content/Site.css
@@ -2,7 +2,7 @@
 
 html, body {
     
-    height: 100%;
+    height:100%;
     font-family: 'Numans', sans-serif;
 }
 
@@ -88,6 +88,20 @@ input:focus {
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+    opacity:0.4;
+}
+@media (max-width: 767px) {
+    #myVideo {
+        display: none;
+    }
+
+    body {
+        background: url('Images/arka_logo.jpeg');
+        background-position:center;
+        background-repeat:no-repeat;
+        background-size: cover;
+
+    }
 }
 
 /* Add some content at the bottom of the video/page */
