--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -20,8 +20,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <video autoplay muted loop id="myVideo" style="opacity:0.4">
+    <video id="myVideo" autoplay muted loop>
         <source src="~/Content/Images/2.mp4" type="video/mp4">
+        <source src="~/Content/Images/2.webm" type="video/webm">
+        <source src="~/Content/Images/2.ogg" type="video/ogg">
     </video>
 
         
