küçük ekrana ayarlandı

--- a/NOVA/Content/Menu.css
+++ b/NOVA/Content/Menu.css
@@ -8,11 +8,11 @@
 body{
    
     height:100%;
-    
+    width:100%;
 }
+
 .container{
     padding-top:5%;
-
 }
 #cssmenu {
     padding: 0,0,0,0;
@@ -207,3 +207,28 @@ body{
         #cssmenu ul ul a span {
             font-size: 12px;
         }
+
+@media (max-width: 767px) {
+
+    #cssmenu {
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        -moz-background-clip: padding;
+        -webkit-background-clip: padding-box;
+        background-clip: padding-box;
+        -moz-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.15);
+        -webkit-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.15);
+        font-weight: 600;
+        width: 100px;
+    }
+
+
+        #cssmenu a {
+            color: #666666;
+            line-height: 160%;
+            padding: 16px 8px 16px 8px;
+            width: 60px;
+        }
+}
