--- a/NOVA/Content/Site.css
+++ b/NOVA/Content/Site.css
@@ -83,7 +83,7 @@ input:focus {
         margin-left: 4px;
     }
 #myVideo {
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     min-width: 100%;
@@ -204,21 +204,7 @@ input:focus {
     transform: translateY(-1.1em) scaleY(1.5);
 }
 
-@keyframes moveIn {
-    50%, 100% {
-        transform: translateY(0em)
-    }
 
-    0% {
-        opacity: 0;
-        filter: blur(10px);
-    }
-
-    100% {
-        opacity: 1;
-        filter: blur(0px);
-    }
-}
 
 
 
