--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -133,6 +133,11 @@
                                     <div data-i18n="Without menu">Fabrika Stok</div>
                                 </a>
                             </li>
+                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayFiyatsizStok">
+                                <a href="@Url.Action("ZiyaretKaydiListesi", "Satis")" class="menu-link">
+                                    <div data-i18n="Without menu">Müşteri Ziyaret Kaydı</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
