--- a/NOVA/Views/Shared/_Layout_fiyatsiz_hammaddelistesi.cshtml
+++ b/NOVA/Views/Shared/_Layout_fiyatsiz_hammaddelistesi.cshtml
@@ -129,15 +129,20 @@
 
                         </li>
 
-                        <li class="menu-item" style="display: @ViewBag.DisplayUretim">
+                        <li class="menu-item" style="display:@ViewBag.DisplayUretim">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
                                 <i class="menu-icon tf-icons bx bxs-hard-hat"></i>
                                 <div data-i18n="Account Settings">Üretim</div>
                             </a>
                             <ul class="menu-sub">
-                                <li class="menu-item" style="display: none">
+                                <li class="menu-item" style="display: @ViewBag.DisplayAnlikUretim">
                                     <a href="@Url.Action("Index", "Uretim")" class="menu-link">
                                         <div data-i18n="Without menu">Anlık Üretim</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item" style="display: @ViewBag.DisplayIsEmriKayit">
+                                    <a href="@Url.Action("Index", "IsEmri")" class="menu-link">
+                                        <div data-i18n="Without menu">İş Emri Giriş</div>
                                     </a>
                                 </li>
                             </ul>
